# hexl-fpga

./: .gitignore  build.sh
benchmark/: bench_fwd_ntt.cpp  bench_inv_ntt.cpp
device/: CMakeLists.txt  compile.sh
host/: CMakeLists.txt
host/inc/: hexl-fpga.h
host/src/: hexl-fpga.cpp
tests/: test_fwd_ntt.cpp  test_hexl_fpga.cpp  test_inv_ntt.cpp
